# variability-search

./: MANIFEST.in  README.md  pyproject.toml
data/: .gitkeep  2025-11-12-04-24-24_ROBO43-Horsehead-R-Bessell_0000_proc.cat.txt  2025-11-12-04-25-26_ROBO43-Horsehead-R-Bessell_0001_proc.cat.txt  2025-11-12-04-26-28_ROBO43-Horsehead-R-Bessell_0002_proc.cat.txt  2025-11-12-04-27-29_ROBO43-Horsehead-R-Bessell_0003_proc.cat.txt  2025-11-12-04-28-31_ROBO43-Horsehead-R-Bessell_0004_proc.cat.txt
src/variability_search/: __init__.py  cli.py  find_variability.py  prepare_catalogues.py  variability_analyser.py  variability_finder.py  variability_search.py
tests/: __init__.py  test_variability_search.py
